--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "3-Day Think Tank materials including AI opportunity identification presentation",
   "main": "presentations/ai-identification-slidev.md",
+  "type": "module",
   "scripts": {
     "dev": "slidev presentations/ai-identification-slidev.md",
     "build": "slidev build presentations/ai-identification-slidev.md --base /3-day-think-tank/",
